vbecded optimizations. seo meta tags, lazy loading, etc.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,91 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mortgage</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Apex Residential Finance - Mortgage Loans & Home Financing</title>
+    <meta
+      name="title"
+      content="Apex Residential Finance - Mortgage Loans & Home Financing"
+    />
+    <meta
+      name="description"
+      content="Get pre-qualified in minutes with Apex Residential Finance. Expert mortgage solutions, competitive rates, and personalized service for your dream home."
+    />
+    <meta
+      name="keywords"
+      content="mortgage, home loan, refinancing, mortgage calculator, home financing, mortgage rates, pre-qualification, residential finance"
+    />
+    <meta name="author" content="Apex Residential Finance" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="theme-color" content="#1a73e8" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://cop4331-g8mern.xyz/" />
+    <meta
+      property="og:title"
+      content="Apex Residential Finance - Mortgage Loans & Home Financing"
+    />
+    <meta
+      property="og:description"
+      content="Get pre-qualified in minutes with Apex Residential Finance. Expert mortgage solutions and competitive rates for your dream home."
+    />
+    <meta
+      property="og:image"
+      content="https://cop4331-g8mern.xyz/image-1.png"
+    />
+    <meta property="og:site_name" content="Apex Residential Finance" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://cop4331-g8mern.xyz/" />
+    <meta
+      name="twitter:title"
+      content="Apex Residential Finance - Mortgage Loans & Home Financing"
+    />
+    <meta
+      name="twitter:description"
+      content="Get pre-qualified in minutes with Apex Residential Finance. Expert mortgage solutions and competitive rates."
+    />
+    <meta
+      name="twitter:image"
+      content="https://cop4331-g8mern.xyz/image-1.png"
+    />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://cop4331-g8mern.xyz/" />
+
+    <!-- Preconnect for performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="/logo192.png" />
+
+    <!-- Structured Data - Organization -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "FinancialService",
+        "name": "Apex Residential Finance",
+        "description": "Expert mortgage solutions and home financing services",
+        "url": "https://cop4331-g8mern.xyz/",
+        "logo": "https://cop4331-g8mern.xyz/image-1.png",
+        "priceRange": "$$",
+        "areaServed": "US",
+        "serviceType": [
+          "Mortgage Loans",
+          "Home Refinancing",
+          "Mortgage Pre-qualification"
+        ]
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
